--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script src="socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+      let socket = io();
+    </script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
